[gd_scene load_steps=19 format=3 uid="uid://cijal7twssdcc"]

[ext_resource type="Script" path="res://Scripts/envm/door.gd" id="1_b47ad"]
[ext_resource type="Texture2D" uid="uid://ug54wopj0tuj" path="res://Assets/Env/doorB.png" id="2_aaj1v"]
[ext_resource type="Texture2D" uid="uid://de4xc6y4fu0mq" path="res://Assets/Env/door_bottom.png" id="2_ay0t0"]
[ext_resource type="Texture2D" uid="uid://cvmyc2qfjvyu1" path="res://Assets/Env/door.png" id="3_ivxu8"]
[ext_resource type="Texture2D" uid="uid://ba6aqis8g7uhp" path="res://Assets/Env/doorG.png" id="4_vr4qk"]
[ext_resource type="Texture2D" uid="uid://do4kkodq0vc5d" path="res://Assets/Env/doorD.png" id="4_w16y5"]
[ext_resource type="Texture2D" uid="uid://c57g0oaldk6dc" path="res://Assets/Env/doorR.png" id="6_rvtuk"]
[ext_resource type="AudioStream" uid="uid://d323ktibp432m" path="res://Sounds/SFX/ambient/door/open.mp3" id="8_f0jbt"]
[ext_resource type="AudioStream" uid="uid://dv21ffenfe053" path="res://Sounds/SFX/ambient/door/close.mp3" id="9_of5bs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e0t2l"]
atlas = ExtResource("2_aaj1v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60u8j"]
atlas = ExtResource("2_ay0t0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d7d5"]
atlas = ExtResource("4_w16y5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rncp"]
atlas = ExtResource("4_vr4qk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi243"]
atlas = ExtResource("3_ivxu8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp346"]
atlas = ExtResource("6_rvtuk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ciu2c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0t2l")
}],
"loop": true,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60u8j")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d7d5")
}],
"loop": true,
"name": &"destroyed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rncp")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi243")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp346")
}],
"loop": true,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40m2n"]
size = Vector2(32, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xowfc"]
size = Vector2(32, 2)

[node name="door" type="CharacterBody2D" groups=["door"]]
scale = Vector2(3, 3)
collision_mask = 0
script = ExtResource("1_b47ad")

[node name="door_sprite" type="AnimatedSprite2D" parent="." groups=["door"]]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_ciu2c")
animation = &"closed"
autoplay = "closed"

[node name="door_collbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_40m2n")

[node name="door_open_detect" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 6

[node name="door_open_detect_collbox1" type="CollisionShape2D" parent="door_open_detect"]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_xowfc")

[node name="door_navlink" type="NavigationLink2D" parent="."]
modulate = Color(1, 1, 0, 1)
bidirectional = false
start_position = Vector2(0, 33.6667)
end_position = Vector2(0, -11.3333)

[node name="eff1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_f0jbt")
volume_db = -10.0
bus = &"Effect"

[node name="eff2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_of5bs")
volume_db = -8.0
bus = &"Effect"

[connection signal="area_entered" from="door_open_detect" to="." method="_on_door_open_detect_area_entered"]
[connection signal="body_entered" from="door_open_detect" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="door_open_detect" to="." method="_on_door_open_detect_body_exited"]
[connection signal="finished" from="eff1" to="." method="_on_eff_1_finished"]
[connection signal="finished" from="eff2" to="." method="_on_eff_2_finished"]
